[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Managers/FishManager.gd" type="Script" id=1]

[node name="FishManager" type="Spatial"]
script = ExtResource( 1 )

[node name="owned" type="Spatial" parent="."]

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
